--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-"D:\2302118\Simulacrum-No1-\SimulacrumNo1\DerivedDataCache" "D:\2302118\Simulacrum-No1-\SimulacrumNo1\Config" "D:\2302118\Simulacrum-No1-\SimulacrumNo1\Intermediate" "D:\2302118\Simulacrum-No1-\SimulacrumNo1\Saved"
+"Simulacrum-No1-\SimulacrumNo1\DerivedDataCache" "Simulacrum-No1-\SimulacrumNo1\Config" "Simulacrum-No1-\SimulacrumNo1\Intermediate" "Simulacrum-No1-\SimulacrumNo1\Saved"
