--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-"Simulacrum-No1-\SimulacrumNo1\DerivedDataCache" "Simulacrum-No1-\SimulacrumNo1\Config" "Simulacrum-No1-\SimulacrumNo1\Intermediate" "Simulacrum-No1-\SimulacrumNo1\Saved"
+"SimulacrumNo1\DerivedDataCache" "SimulacrumNo1\Config" "SimulacrumNo1\Intermediate" "SimulacrumNo1\Saved"
