--- a/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -206,10 +206,10 @@ ImportLandscape_AlphamapType=0
 ShowUnusedLayers=True
 
 [EditorStartup]
-LastLevel=/Engine/Maps/Templates/OpenWorld
+LastLevel=/Game/sANDdUNE
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=
 RecentAssetEditors=MaterialEditor
