--- a/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -353,11 +353,17 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedI
 LastLevel=/Game/sANDdUNE
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -379,19 +385,10 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=TextureEditor
-OpenAssetsAtExit=/Game/Materials/Gravel/M_Grave.M_Grave
-OpenAssetsAtExit=/Game/Materials/Gravel/M_GravelDistprtionOPacity.M_GravelDistprtionOPacity
-OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_MergeGarvCobbleDistortion.M_MergeGarvCobbleDistortion
-OpenAssetsAtExit=/Game/Materials/Cobblestone/M_CbblestoneDistortionOpacity.M_CbblestoneDistortionOpacity
 OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_cloudToWobble.M_cloudToWobble
 OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_Cloud.M_Cloud
 OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_wobble.M_wobble
+OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_Wobble2.M_Wobble2
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -890,6 +887,7 @@ TextureCube.Adjustments=True
 TextureCube.File Path=True
 TextureCube.Compositing=True
 TextureCube.Interchange=True
+TextureCube.Interchange=True
 MaterialExpressionFunctionOutput.MaterialExpressionFunctionOutput=True
 MaterialExpressionFunctionOutput.MaterialExpression=True
 MaterialFunction.MaterialFunction=True
@@ -981,6 +979,7 @@ InputTriggerPulse.Trigger Settings=True
 EnhancedInputDeveloperSettings.Trigger Default Values=True
 EnhancedInputEditorProjectSettings.Default=True
 MegascansMaterialParentSettings.Parent Materials=True
+InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
@@ -1368,7 +1367,6 @@ MaterialExpressionVectorParameter.MaterialExpressionVectorParameter=True
 MaterialExpressionVectorParameter.MaterialExpression=True
 MaterialExpressionVectorParameter.CustomPrimitiveData=True
 MaterialExpressionVectorParameter.ParameterCustomization=True
-InterchangeFbxSettings.FBX =True
 BrushBaseProperties.Brush=True
 MeshSelectionToolProperties.Selection=True
 PolygroupLayersProperties.PolyGroup Layer=True
@@ -1388,6 +1386,38 @@ MaterialExpressionDesaturation.MaterialExpression=True
 MaterialExpressionInverseLinearInterpolate.MaterialExpressionInverseLinearInterpolate=True
 MaterialExpressionInverseLinearInterpolate.MaterialExpression=True
 MaterialExpressionFrac.MaterialExpression=True
+MaterialExpressionMax.MaterialExpressionMax=True
+MaterialExpressionMax.MaterialExpression=True
+MaterialExpressionCeil.MaterialExpression=True
+MaterialExpressionFloor.MaterialExpression=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.AtmosphereAndCloud=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Physics=True
+SkyLight.Networking=True
+SkyLight.Actor=True
+SkyAtmosphere.TransformCommon=True
+SkyAtmosphere.Planet=True
+SkyAtmosphere.Atmosphere=True
+SkyAtmosphere.Atmosphere - Rayleigh=True
+SkyAtmosphere.Atmosphere - Mie=True
+SkyAtmosphere.Atmosphere - Absorption=True
+SkyAtmosphere.Art Direction=True
+SkyAtmosphere.Rendering=True
+SkyAtmosphere.Physics=True
+SkyAtmosphere.Tags=True
+SkyAtmosphere.Activation=True
+SkyAtmosphere.Cooking=True
+SkyAtmosphere.Replication=True
+SkyAtmosphere.Networking=True
+SkyAtmosphere.Actor=True
+Texture2D.Interchange =True
 
 [ContentBrowser]
 ContentBrowserDrawer.SelectedPaths=/Game/Materials/MergeMaterial
@@ -1420,18 +1450,18 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials/MergeMaterial
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Cobblestone
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Gravel
-ContentBrowserDrawer.JumpMRU=/All/Game/Assets
-ContentBrowserDrawer.JumpMRU=/All/Game/Developers
-ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Textures
-ContentBrowserDrawer.JumpMRU=/All/Game/WindowBox
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/TesselatingPatterns
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/MergeMaterial
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Paintedplaster
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/StoneWall
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials/TesselatingPatterns
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials
+ContentBrowserDrawer.JumpMRU=/All/Game
+ContentBrowserDrawer.JumpMRU=/All/Game/Assets
+ContentBrowserDrawer.JumpMRU=/All/Game/WindowBox
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Cobblestone
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Gravel
+ContentBrowserDrawer.JumpMRU=/All/Game/Developers
 ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
@@ -1519,36 +1549,36 @@ ContentBrowserTab2.JumpMRU=/All/Game/Materials/TesselatingPatterns
 ContentBrowserTab2.JumpMRU=/All
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast
-MRUItem1=/Game/Materials/MergeMaterial/M_wobble
-MRUItem2=/Game/Materials/MergeMaterial/M_Cloud
-MRUItem3=/Game/Materials/MergeMaterial/M_cloudToWobble
-MRUItem4=/Game/Materials/Cobblestone/M_CbblestoneDistortionOpacity
-MRUItem5=/Game/Materials/MergeMaterial/M_MergeGarvCobbleDistortion
-MRUItem6=/Game/Materials/Gravel/M_GravelDistprtionOPacity
-MRUItem7=/Game/Materials/Gravel/M_Grave
-MRUItem8=/Game/Materials/MergeMaterial/M_MergeGravCobble
-MRUItem9=/Game/sANDdUNE
-MRUItem10=/Game/Materials/Gravel/gravelly_sand_disp_4k
-MRUItem11=/Game/Materials/Textures/WaterTexB+W
-MRUItem12=/Engine/Functions/Engine_MaterialFunctions01/Cubemaps/InteriorCubemap
-MRUItem13=/Game/Materials/M_WindowBoxWorldAligned
-MRUItem14=/Game/Materials/M_WindowBOxPan
-MRUItem15=/Game/Materials/Cobblestone/M_CobblePavement
-MRUItem16=/Game/Materials/M_AbstractSphereBox
-MRUItem17=/Game/Materials/StoneWall/lambert3
-MRUItem18=/Game/WindowScene
-MRUItem19=/Game/WindowBox/RT_Sphere
-MRUItem20=/Game/Materials/M_WindowSphere
-MRUItem21=/Game/Materials/M_AbstractSphere
-MRUItem22=/Game/WindowBox/RT_WindowBox
-MRUItem23=/Game/Materials/Paintedplaster/M_PaintedPlaster
-MRUItem24=/Game/Materials/M_windowBox
-MRUItem25=/Game/Materials/lambert1
-MRUItem26=/Game/Materials/TesselatingPatterns/M_PatternMerge
-MRUItem27=/Game/Materials/TesselatingPatterns/M_Triforce
-MRUItem28=/Game/Materials/TesselatingPatterns/M_Checker
-MRUItem29=/Game/Materials/Gravel/gravelly_sand_diff_4k
+MRUItem0=/Game/Materials/MergeMaterial/M_Wobble2
+MRUItem1=/Game/Materials/Textures/BLurNoise
+MRUItem2=/Game/Materials/MergeMaterial/M_wobble
+MRUItem3=/Game/Materials/MergeMaterial/M_Cloud
+MRUItem4=/Game/Materials/MergeMaterial/M_cloudToWobble
+MRUItem5=/Game/Materials/Textures/TesselatingPatterns/M_PatternMerge
+MRUItem6=/Game/Materials/Textures/TesselatingPatterns/M_Triforce
+MRUItem7=/Game/Materials/Textures/TesselatingPatterns/M_Checker
+MRUItem8=/Game/WindowBox/RT_SphereBox
+MRUItem9=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast
+MRUItem10=/Game/Materials/Cobblestone/M_CbblestoneDistortionOpacity
+MRUItem11=/Game/Materials/MergeMaterial/M_MergeGarvCobbleDistortion
+MRUItem12=/Game/Materials/Gravel/M_GravelDistprtionOPacity
+MRUItem13=/Game/Materials/Gravel/M_Grave
+MRUItem14=/Game/Materials/MergeMaterial/M_MergeGravCobble
+MRUItem15=/Game/sANDdUNE
+MRUItem16=/Game/Materials/Gravel/gravelly_sand_disp_4k
+MRUItem17=/Game/Materials/Textures/WaterTexB+W
+MRUItem18=/Engine/Functions/Engine_MaterialFunctions01/Cubemaps/InteriorCubemap
+MRUItem19=/Game/Materials/M_WindowBoxWorldAligned
+MRUItem20=/Game/Materials/M_WindowBOxPan
+MRUItem21=/Game/Materials/Cobblestone/M_CobblePavement
+MRUItem22=/Game/Materials/M_AbstractSphereBox
+MRUItem23=/Game/Materials/StoneWall/lambert3
+MRUItem24=/Game/WindowScene
+MRUItem25=/Game/WindowBox/RT_Sphere
+MRUItem26=/Game/Materials/M_WindowSphere
+MRUItem27=/Game/Materials/M_AbstractSphere
+MRUItem28=/Game/WindowBox/RT_WindowBox
+MRUItem29=/Game/Materials/Paintedplaster/M_PaintedPlaster
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1709,6 +1739,8 @@ PerWorldEditorSettings=(("/Game/sANDdUNE.sANDdUNE", (LoadedEditorRegions=((Min=(
 /Game/Materials/MergeMaterial/M_cloudToWobble.M_cloudToWobble=0
 /Game/Materials/MergeMaterial/M_Cloud.M_Cloud=0
 /Game/Materials/MergeMaterial/M_wobble.M_wobble=0
+/Game/WindowBox/RT_SphereBox.RT_SphereBox=1
+/Game/Materials/Textures/BLurNoise.BLurNoise=1
 
 [MaterialEditor]
 PrimType=3
@@ -3575,7 +3607,8 @@ GameMapsSettings.DefaultMaps=True
 Theme0=New Theme
 
 [RecentColors]
-Color0=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
-Color1=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
+Color0=(R=319.133575,G=0.210913,B=1.000000,A=1.000000)
+Color1=(R=0.000000,G=0.000000,B=0.500000,A=0.500000)
 Color2=(R=0.000000,G=0.000000,B=0.000000,A=0.000000)
+Color3=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
 
