--- a/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -355,8 +355,8 @@ LastLevel=/Game/sANDdUNE
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -385,10 +385,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_cloudToWobble.M_cloudToWobble
-OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_Cloud.M_Cloud
-OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_wobble.M_wobble
-OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_Wobble2.M_Wobble2
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1295,6 +1291,7 @@ Texture2D.Compositing=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 MaterialExpression.MaterialExpression=True
 MaterialExpressionTime.MaterialExpressionTime=True
 MaterialExpressionTime.MaterialExpression=True
@@ -1417,10 +1414,9 @@ SkyAtmosphere.Cooking=True
 SkyAtmosphere.Replication=True
 SkyAtmosphere.Networking=True
 SkyAtmosphere.Actor=True
-Texture2D.Interchange =True
 
 [ContentBrowser]
-ContentBrowserDrawer.SelectedPaths=/Game/Materials/MergeMaterial
+ContentBrowserDrawer.SelectedPaths=/Game/Assets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.PluginFilters=
@@ -1450,6 +1446,7 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
+ContentBrowserDrawer.JumpMRU=/All/Game/Assets
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Textures
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/TesselatingPatterns
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/MergeMaterial
@@ -1457,7 +1454,6 @@ ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Paintedplaster
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/StoneWall
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game
-ContentBrowserDrawer.JumpMRU=/All/Game/Assets
 ContentBrowserDrawer.JumpMRU=/All/Game/WindowBox
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Cobblestone
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Gravel
@@ -3611,4 +3607,7 @@ Color0=(R=319.133575,G=0.210913,B=1.000000,A=1.000000)
 Color1=(R=0.000000,G=0.000000,B=0.500000,A=0.500000)
 Color2=(R=0.000000,G=0.000000,B=0.000000,A=0.000000)
 Color3=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
+
+[SuppressableDialogs]
+Warning_NoPreviewMeshFound=False
 
