--- a/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -353,10 +353,8 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedI
 LastLevel=/Game/sANDdUNE
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=PropertyEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
@@ -364,7 +362,12 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -382,12 +385,9 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=TextureEditor
 OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_cloudToWobble.M_cloudToWobble
-OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_Wobble2.M_Wobble2
-OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_Cloud.M_Cloud
+OpenAssetsAtExit=/Game/Materials/M_windowBox.M_windowBox
+OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_MergeTestC.M_MergeTestC
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -1296,6 +1296,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 MaterialExpression.MaterialExpression=True
 MaterialExpressionTime.MaterialExpressionTime=True
 MaterialExpressionTime.MaterialExpression=True
@@ -1418,7 +1419,21 @@ SkyAtmosphere.Cooking=True
 SkyAtmosphere.Replication=True
 SkyAtmosphere.Networking=True
 SkyAtmosphere.Actor=True
-Texture2D.Interchange =True
+VolumetricCloud.TransformCommon=True
+VolumetricCloud.Layer=True
+VolumetricCloud.Planet=True
+VolumetricCloud.Cloud Material=True
+VolumetricCloud.Cloud Tracing=True
+VolumetricCloud.Art Direction=True
+VolumetricCloud.Rendering=True
+VolumetricCloud.Physics=True
+VolumetricCloud.Tags=True
+VolumetricCloud.Activation=True
+VolumetricCloud.Cooking=True
+VolumetricCloud.Replication=True
+VolumetricCloud.Networking=True
+VolumetricCloud.Actor=True
+TextureCube.Interchange =True
 
 [ContentBrowser]
 ContentBrowserDrawer.SelectedPaths=/Game/Materials/MergeMaterial
@@ -1551,36 +1566,36 @@ ContentBrowserTab2.JumpMRU=/All/Game/Materials/TesselatingPatterns
 ContentBrowserTab2.JumpMRU=/All
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/Textures/distortion_shadertest
-MRUItem1=/Game/Materials/MergeMaterial/M_Cloud
-MRUItem2=/Game/Materials/MergeMaterial/M_Wobble2
-MRUItem3=/Game/Materials/Textures/BLurNoise
+MRUItem0=/Game/Materials/MergeMaterial/M_MergeTestC
+MRUItem1=/Game/Materials/MergeMaterial/M_MergeTestB
+MRUItem2=/Game/WindowBox/RT_SphereBox
+MRUItem3=/Game/Materials/M_windowBox
 MRUItem4=/Game/Materials/MergeMaterial/M_cloudToWobble
-MRUItem5=/Game/Materials/MergeMaterial/M_wobble
-MRUItem6=/Game/Materials/Textures/TesselatingPatterns/M_PatternMerge
-MRUItem7=/Game/Materials/Textures/TesselatingPatterns/M_Triforce
-MRUItem8=/Game/Materials/Textures/TesselatingPatterns/M_Checker
-MRUItem9=/Game/WindowBox/RT_SphereBox
-MRUItem10=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast
-MRUItem11=/Game/Materials/Cobblestone/M_CbblestoneDistortionOpacity
-MRUItem12=/Game/Materials/MergeMaterial/M_MergeGarvCobbleDistortion
-MRUItem13=/Game/Materials/Gravel/M_GravelDistprtionOPacity
-MRUItem14=/Game/Materials/Gravel/M_Grave
-MRUItem15=/Game/Materials/MergeMaterial/M_MergeGravCobble
-MRUItem16=/Game/sANDdUNE
-MRUItem17=/Game/Materials/Gravel/gravelly_sand_disp_4k
-MRUItem18=/Game/Materials/Textures/WaterTexB+W
-MRUItem19=/Engine/Functions/Engine_MaterialFunctions01/Cubemaps/InteriorCubemap
-MRUItem20=/Game/Materials/M_WindowBoxWorldAligned
-MRUItem21=/Game/Materials/M_WindowBOxPan
-MRUItem22=/Game/Materials/Cobblestone/M_CobblePavement
-MRUItem23=/Game/Materials/M_AbstractSphereBox
-MRUItem24=/Game/Materials/StoneWall/lambert3
-MRUItem25=/Game/WindowScene
-MRUItem26=/Game/WindowBox/RT_Sphere
-MRUItem27=/Game/Materials/M_WindowSphere
-MRUItem28=/Game/Materials/M_AbstractSphere
-MRUItem29=/Game/WindowBox/RT_WindowBox
+MRUItem5=/Game/Materials/MergeMaterial/M_MergeTestA
+MRUItem6=/Game/Materials/MergeMaterial/M_Cloud
+MRUItem7=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast
+MRUItem8=/Game/Materials/MergeMaterial/M_Wobble2
+MRUItem9=/Game/Materials/Textures/distortion_shadertest
+MRUItem10=/Game/Materials/Textures/BLurNoise
+MRUItem11=/Game/Materials/MergeMaterial/M_wobble
+MRUItem12=/Game/Materials/Textures/TesselatingPatterns/M_PatternMerge
+MRUItem13=/Game/Materials/Textures/TesselatingPatterns/M_Triforce
+MRUItem14=/Game/Materials/Textures/TesselatingPatterns/M_Checker
+MRUItem15=/Game/Materials/Cobblestone/M_CbblestoneDistortionOpacity
+MRUItem16=/Game/Materials/MergeMaterial/M_MergeGarvCobbleDistortion
+MRUItem17=/Game/Materials/Gravel/M_GravelDistprtionOPacity
+MRUItem18=/Game/Materials/Gravel/M_Grave
+MRUItem19=/Game/Materials/MergeMaterial/M_MergeGravCobble
+MRUItem20=/Game/sANDdUNE
+MRUItem21=/Game/Materials/Gravel/gravelly_sand_disp_4k
+MRUItem22=/Game/Materials/Textures/WaterTexB+W
+MRUItem23=/Engine/Functions/Engine_MaterialFunctions01/Cubemaps/InteriorCubemap
+MRUItem24=/Game/Materials/M_WindowBoxWorldAligned
+MRUItem25=/Game/Materials/M_WindowBOxPan
+MRUItem26=/Game/Materials/Cobblestone/M_CobblePavement
+MRUItem27=/Game/Materials/M_AbstractSphereBox
+MRUItem28=/Game/Materials/StoneWall/lambert3
+MRUItem29=/Game/WindowScene
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1596,6 +1611,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/MergeMaterial/M_Wobble2.M_Wobble2;
 RecentlyPlaced=/Game/Materials/MergeMaterial/M_Cloud.M_Cloud;
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/MergeMaterial/M_wobble.M_wobble;
@@ -1615,7 +1631,6 @@ RecentlyPlaced=/Game/WindowBox/SphereForSphere.SphereForSphere;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Materials/TesselatingPatterns/M_Triforce.M_Triforce;
 RecentlyPlaced=/Game/Materials/TesselatingPatterns/Checker.Checker;
-RecentlyPlaced=/Game/Materials/Cobblestone/M_CobblePavement.M_CobblePavement;
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -1741,7 +1756,7 @@ PerWorldEditorSettings=(("/Game/sANDdUNE.sANDdUNE", (LoadedEditorRegions=((Min=(
 /Game/Materials/MergeMaterial/M_cloudToWobble.M_cloudToWobble=0
 /Game/Materials/MergeMaterial/M_Cloud.M_Cloud=0
 /Game/Materials/MergeMaterial/M_wobble.M_wobble=0
-/Game/WindowBox/RT_SphereBox.RT_SphereBox=1
+/Game/WindowBox/RT_SphereBox.RT_SphereBox=0
 /Game/Materials/Textures/BLurNoise.BLurNoise=0
 /Game/Materials/MergeMaterial/M_Wobble2.M_Wobble2=0
 
@@ -3610,12 +3625,6 @@ Texture2D.Texture=False
 
 [ColorThemes]
 Theme0=New Theme
-
-[RecentColors]
-Color0=(R=319.133575,G=0.210913,B=1.000000,A=1.000000)
-Color1=(R=0.000000,G=0.000000,B=0.500000,A=0.500000)
-Color2=(R=0.000000,G=0.000000,B=0.000000,A=0.000000)
-Color3=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24
