--- a/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -353,19 +353,26 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedI
 LastLevel=/Game/sANDdUNE
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -378,19 +385,11 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_MergeTestA.M_MergeTestA
-OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_cloudToWobble.M_cloudToWobble
-OpenAssetsAtExit=/Game/Materials/M_windowBox.M_windowBox
-OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_MergeTestC.M_MergeTestC
+OpenAssetsAtExit=/Game/Materials/Babtopus/M_BabtopusDark.M_BabtopusDark
+OpenAssetsAtExit=/Game/Materials/Babtopus/M_BabtopusHigh.M_BabtopusHigh
+OpenAssetsAtExit=/Game/Materials/Babtopus/M_BabtopusMid.M_BabtopusMid
+OpenAssetsAtExit=/Game/Materials/Textures/Babopus_DarkTones.Babopus_DarkTones
 OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_MergeTestB.M_MergeTestB
-OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_Cloud.M_Cloud
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -890,6 +889,7 @@ TextureCube.File Path=True
 TextureCube.Compositing=True
 TextureCube.Interchange=True
 TextureCube.Interchange=True
+TextureCube.Interchange=True
 MaterialExpressionFunctionOutput.MaterialExpressionFunctionOutput=True
 MaterialExpressionFunctionOutput.MaterialExpression=True
 MaterialFunction.MaterialFunction=True
@@ -981,6 +981,7 @@ InputTriggerPulse.Trigger Settings=True
 EnhancedInputDeveloperSettings.Trigger Default Values=True
 EnhancedInputEditorProjectSettings.Default=True
 MegascansMaterialParentSettings.Parent Materials=True
+InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
@@ -1300,6 +1301,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 MaterialExpression.MaterialExpression=True
 MaterialExpressionTime.MaterialExpressionTime=True
 MaterialExpressionTime.MaterialExpression=True
@@ -1436,7 +1438,16 @@ VolumetricCloud.Cooking=True
 VolumetricCloud.Replication=True
 VolumetricCloud.Networking=True
 VolumetricCloud.Actor=True
-TextureCube.Interchange =True
+MaterialExpressionColorRamp.MaterialExpressionColorRamp=True
+MaterialExpressionColorRamp.MaterialExpression=True
+InterchangeFbxSettings.FBX =True
+Texture2D.Interchange =True
+MaterialExpressionNoise.MaterialExpressionNoise=True
+MaterialExpressionNoise.MaterialExpression=True
+MaterialExpressionPanner.MaterialExpressionPanner=True
+MaterialExpressionPanner.MaterialExpression=True
+MaterialExpressionConvert.MaterialExpressionConvert=True
+MaterialExpressionConvert.MaterialExpression=True
 
 [ContentBrowser]
 ContentBrowserDrawer.SelectedPaths=/Game/Materials/Textures
@@ -1470,12 +1481,13 @@ ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Textures
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Babtopus
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/MergeMaterial
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/WindowBox
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/TesselatingPatterns
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Paintedplaster
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/StoneWall
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Assets
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Cobblestone
@@ -1569,36 +1581,36 @@ ContentBrowserTab2.JumpMRU=/All/Game/Materials/TesselatingPatterns
 ContentBrowserTab2.JumpMRU=/All
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/MergeMaterial/M_Cloud
-MRUItem1=/Game/Materials/MergeMaterial/M_MergeTestC
-MRUItem2=/Game/Materials/MergeMaterial/M_MergeTestB
-MRUItem3=/Game/WindowBox/RT_SphereBox
-MRUItem4=/Game/Materials/M_windowBox
-MRUItem5=/Game/Materials/MergeMaterial/M_cloudToWobble
-MRUItem6=/Game/Materials/MergeMaterial/M_MergeTestA
-MRUItem7=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast
-MRUItem8=/Game/Materials/MergeMaterial/M_Wobble2
-MRUItem9=/Game/Materials/Textures/distortion_shadertest
-MRUItem10=/Game/Materials/Textures/BLurNoise
-MRUItem11=/Game/Materials/MergeMaterial/M_wobble
-MRUItem12=/Game/Materials/Textures/TesselatingPatterns/M_PatternMerge
-MRUItem13=/Game/Materials/Textures/TesselatingPatterns/M_Triforce
-MRUItem14=/Game/Materials/Textures/TesselatingPatterns/M_Checker
-MRUItem15=/Game/Materials/Cobblestone/M_CbblestoneDistortionOpacity
-MRUItem16=/Game/Materials/MergeMaterial/M_MergeGarvCobbleDistortion
-MRUItem17=/Game/Materials/Gravel/M_GravelDistprtionOPacity
-MRUItem18=/Game/Materials/Gravel/M_Grave
-MRUItem19=/Game/Materials/MergeMaterial/M_MergeGravCobble
-MRUItem20=/Game/sANDdUNE
-MRUItem21=/Game/Materials/Gravel/gravelly_sand_disp_4k
-MRUItem22=/Game/Materials/Textures/WaterTexB+W
-MRUItem23=/Engine/Functions/Engine_MaterialFunctions01/Cubemaps/InteriorCubemap
-MRUItem24=/Game/Materials/M_WindowBoxWorldAligned
-MRUItem25=/Game/Materials/M_WindowBOxPan
-MRUItem26=/Game/Materials/Cobblestone/M_CobblePavement
-MRUItem27=/Game/Materials/M_AbstractSphereBox
-MRUItem28=/Game/Materials/StoneWall/lambert3
-MRUItem29=/Game/WindowScene
+MRUItem0=/Game/Materials/Babtopus/M_resolutionDistortionTest
+MRUItem1=/Game/Materials/MergeMaterial/M_MergeTestB
+MRUItem2=/Game/Materials/Textures/LowSatDistortionMap2
+MRUItem3=/Game/Materials/Textures/Babopus_DarkTones
+MRUItem4=/Game/Materials/Babtopus/M_BabtopusMid
+MRUItem5=/Game/Materials/Babtopus/M_BabtopusHigh
+MRUItem6=/Game/Materials/Babtopus/M_BabtopusDark
+MRUItem7=/Game/Materials/MergeMaterial/M_MergeTestC
+MRUItem8=/Game/Materials/M_windowBox
+MRUItem9=/Game/Materials/MergeMaterial/M_cloudToWobble
+MRUItem10=/Game/Materials/MergeMaterial/M_MergeTestA
+MRUItem11=/Game/Materials/MergeMaterial/M_Cloud
+MRUItem12=/Game/Materials/Textures/distortion_shadertest
+MRUItem13=/Game/Materials/Textures/BLurNoise
+MRUItem14=/Game/Materials/Babtopus/Babopus_DarkTones
+MRUItem15=/Game/WindowBox/RT_SphereBox
+MRUItem16=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast
+MRUItem17=/Game/Materials/MergeMaterial/M_Wobble2
+MRUItem18=/Game/Materials/MergeMaterial/M_wobble
+MRUItem19=/Game/Materials/Textures/TesselatingPatterns/M_PatternMerge
+MRUItem20=/Game/Materials/Textures/TesselatingPatterns/M_Triforce
+MRUItem21=/Game/Materials/Textures/TesselatingPatterns/M_Checker
+MRUItem22=/Game/Materials/Cobblestone/M_CbblestoneDistortionOpacity
+MRUItem23=/Game/Materials/MergeMaterial/M_MergeGarvCobbleDistortion
+MRUItem24=/Game/Materials/Gravel/M_GravelDistprtionOPacity
+MRUItem25=/Game/Materials/Gravel/M_Grave
+MRUItem26=/Game/Materials/MergeMaterial/M_MergeGravCobble
+MRUItem27=/Game/sANDdUNE
+MRUItem28=/Game/Materials/Gravel/gravelly_sand_disp_4k
+MRUItem29=/Game/Materials/Textures/WaterTexB+W
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1614,6 +1626,9 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/Materials/Babtopus/BabtopuspPlane2.BabtopuspPlane2;
+RecentlyPlaced=/Game/Materials/Babtopus/BabtopuspPlane1.BabtopuspPlane1;
 RecentlyPlaced=/Game/Materials/MergeMaterial/M_Wobble2.M_Wobble2;
 RecentlyPlaced=/Game/Materials/MergeMaterial/M_Cloud.M_Cloud;
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1631,9 +1646,6 @@ RecentlyPlaced=/Game/Materials/Paintedplaster/M_PaintedPlaster.M_PaintedPlaster;
 RecentlyPlaced=/Game/Materials/StoneWall/lambert3.lambert3;
 RecentlyPlaced=/Game/Materials/lambert1.lambert1;
 RecentlyPlaced=/Game/WindowBox/SphereForSphere.SphereForSphere;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Materials/TesselatingPatterns/M_Triforce.M_Triforce;
-RecentlyPlaced=/Game/Materials/TesselatingPatterns/Checker.Checker;
 
 [DetailPropertyExpansion]
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
@@ -1735,7 +1747,7 @@ PerWorldEditorSettings=(("/Game/sANDdUNE.sANDdUNE", (LoadedEditorRegions=((Min=(
 /Game/Materials/gravelly_sand_diff_4k.gravelly_sand_diff_4k=0
 /Game/Materials/lambert1.lambert1=0
 /Game/Materials/StoneWall/lambert3.lambert3=0
-/Game/Materials/M_windowBox.M_windowBox=1
+/Game/Materials/M_windowBox.M_windowBox=0
 /Game/Materials/TesselatingPatterns/M_Checker.M_Checker=0
 /Game/Materials/M_MergeGravCobble.M_MergeGravCobble=0
 /Game/Materials/TesselatingPatterns/M_PatternMerge.M_PatternMerge=0
@@ -1756,8 +1768,8 @@ PerWorldEditorSettings=(("/Game/sANDdUNE.sANDdUNE", (LoadedEditorRegions=((Min=(
 /Game/Materials/MergeMaterial/M_MergeGarvCobbleDistortion.M_MergeGarvCobbleDistortion=0
 /Game/Materials/Cobblestone/M_CbblestoneDistortionOpacity.M_CbblestoneDistortionOpacity=0
 /Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast.CheapContrast=0
-/Game/Materials/MergeMaterial/M_cloudToWobble.M_cloudToWobble=1
-/Game/Materials/MergeMaterial/M_Cloud.M_Cloud=1
+/Game/Materials/MergeMaterial/M_cloudToWobble.M_cloudToWobble=0
+/Game/Materials/MergeMaterial/M_Cloud.M_Cloud=0
 /Game/Materials/MergeMaterial/M_wobble.M_wobble=0
 /Game/WindowBox/RT_SphereBox.RT_SphereBox=0
 /Game/Materials/Textures/BLurNoise.BLurNoise=0
@@ -1765,6 +1777,8 @@ PerWorldEditorSettings=(("/Game/sANDdUNE.sANDdUNE", (LoadedEditorRegions=((Min=(
 /Game/Materials/MergeMaterial/M_MergeTestA.M_MergeTestA=0
 /Game/Materials/MergeMaterial/M_MergeTestC.M_MergeTestC=0
 /Game/Materials/MergeMaterial/M_MergeTestB.M_MergeTestB=0
+/Game/Materials/Textures/distortion_shadertest.distortion_shadertest=0
+/Game/Materials/Textures/LowSatDistortionMap2.LowSatDistortionMap2=0
 
 [MaterialEditor]
 PrimType=1
@@ -3617,7 +3631,7 @@ Assets_LastSelectedPipeline=InterchangeGenericAssetsPipeline
 
 [InterchangeImportDialogOptions]
 ImportContentDialogSizeX=1004
-ImportContentDialogSizeY=676.66668701171875
+ImportContentDialogSizeY=677
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -3629,6 +3643,7 @@ GameMapsSettings.DefaultMaps=True
 Texture2D.LevelOfDetail=False
 Texture2D.Texture=False
 StaticMeshActor.Materials=True
+Texture2D.Compositing=False
 
 [ColorThemes]
 Theme0=New Theme
