--- a/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -357,11 +357,12 @@ CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -384,12 +385,11 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
 RecentAssetEditors=TextureEditor
-RecentAssetEditors=TextureEditor
 OpenAssetsAtExit=/Game/Materials/Babtopus/M_BabtopusDark.M_BabtopusDark
 OpenAssetsAtExit=/Game/Materials/Babtopus/M_BabtopusHigh.M_BabtopusHigh
 OpenAssetsAtExit=/Game/Materials/Babtopus/M_BabtopusMid.M_BabtopusMid
-OpenAssetsAtExit=/Game/Materials/Textures/Babopus_DarkTones.Babopus_DarkTones
-OpenAssetsAtExit=/Game/Materials/MergeMaterial/M_MergeTestB.M_MergeTestB
+OpenAssetsAtExit=/Game/Materials/Babtopus/M_BabtopusMerged.M_BabtopusMerged
+OpenAssetsAtExit=/Game/Materials/DancingMen/M_DancingMan.M_DancingMan
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -986,6 +986,7 @@ InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
+InterchangeFbxSettings.FBX=True
 GameplayDebuggerConfig.Input=True
 GameplayDebuggerConfig.Display=True
 GameplayDebuggerConfig.AddOns=True
@@ -1302,6 +1303,7 @@ Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
 Texture2D.Interchange=True
+Texture2D.Interchange=True
 MaterialExpression.MaterialExpression=True
 MaterialExpressionTime.MaterialExpressionTime=True
 MaterialExpressionTime.MaterialExpression=True
@@ -1440,8 +1442,6 @@ VolumetricCloud.Networking=True
 VolumetricCloud.Actor=True
 MaterialExpressionColorRamp.MaterialExpressionColorRamp=True
 MaterialExpressionColorRamp.MaterialExpression=True
-InterchangeFbxSettings.FBX =True
-Texture2D.Interchange =True
 MaterialExpressionNoise.MaterialExpressionNoise=True
 MaterialExpressionNoise.MaterialExpression=True
 MaterialExpressionPanner.MaterialExpressionPanner=True
@@ -1480,17 +1480,18 @@ ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
 ContentBrowserDrawer.ListViewColumnsManuallyChangedOnce=False
 ContentBrowserDrawer.ColumnViewColumnsManuallyChangedOnce=False
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Textures
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/DancingMen
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Babtopus
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials/MergeMaterial
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Cobblestone
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Textures
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials/MergeMaterial
 ContentBrowserDrawer.JumpMRU=/All/Game/WindowBox
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/TesselatingPatterns
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Paintedplaster
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/StoneWall
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Assets
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Cobblestone
 ContentBrowserDrawer.JumpMRU=/All/Game/Materials/Gravel
 ContentBrowserDrawer.JumpMRU=/All/Game/Developers
 ContentBrowserDrawer.JumpMRU=/All
@@ -1581,36 +1582,36 @@ ContentBrowserTab2.JumpMRU=/All/Game/Materials/TesselatingPatterns
 ContentBrowserTab2.JumpMRU=/All
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/Babtopus/M_resolutionDistortionTest
-MRUItem1=/Game/Materials/MergeMaterial/M_MergeTestB
-MRUItem2=/Game/Materials/Textures/LowSatDistortionMap2
-MRUItem3=/Game/Materials/Textures/Babopus_DarkTones
-MRUItem4=/Game/Materials/Babtopus/M_BabtopusMid
-MRUItem5=/Game/Materials/Babtopus/M_BabtopusHigh
-MRUItem6=/Game/Materials/Babtopus/M_BabtopusDark
-MRUItem7=/Game/Materials/MergeMaterial/M_MergeTestC
-MRUItem8=/Game/Materials/M_windowBox
-MRUItem9=/Game/Materials/MergeMaterial/M_cloudToWobble
-MRUItem10=/Game/Materials/MergeMaterial/M_MergeTestA
-MRUItem11=/Game/Materials/MergeMaterial/M_Cloud
-MRUItem12=/Game/Materials/Textures/distortion_shadertest
-MRUItem13=/Game/Materials/Textures/BLurNoise
-MRUItem14=/Game/Materials/Babtopus/Babopus_DarkTones
-MRUItem15=/Game/WindowBox/RT_SphereBox
-MRUItem16=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast
-MRUItem17=/Game/Materials/MergeMaterial/M_Wobble2
-MRUItem18=/Game/Materials/MergeMaterial/M_wobble
-MRUItem19=/Game/Materials/Textures/TesselatingPatterns/M_PatternMerge
-MRUItem20=/Game/Materials/Textures/TesselatingPatterns/M_Triforce
-MRUItem21=/Game/Materials/Textures/TesselatingPatterns/M_Checker
-MRUItem22=/Game/Materials/Cobblestone/M_CbblestoneDistortionOpacity
-MRUItem23=/Game/Materials/MergeMaterial/M_MergeGarvCobbleDistortion
-MRUItem24=/Game/Materials/Gravel/M_GravelDistprtionOPacity
-MRUItem25=/Game/Materials/Gravel/M_Grave
-MRUItem26=/Game/Materials/MergeMaterial/M_MergeGravCobble
-MRUItem27=/Game/sANDdUNE
-MRUItem28=/Game/Materials/Gravel/gravelly_sand_disp_4k
-MRUItem29=/Game/Materials/Textures/WaterTexB+W
+MRUItem0=/Game/Materials/DancingMen/M_DancingMan
+MRUItem1=/Game/Materials/Babtopus/M_BabtopusMerged
+MRUItem2=/Game/Materials/Babtopus/M_BabtopusMid
+MRUItem3=/Game/Materials/Babtopus/M_BabtopusHigh
+MRUItem4=/Game/Materials/Babtopus/M_BabtopusDark
+MRUItem5=/Game/Materials/Babtopus/M_resolutionDistortionTest
+MRUItem6=/Game/Materials/MergeMaterial/M_MergeTestB
+MRUItem7=/Game/Materials/Textures/LowSatDistortionMap2
+MRUItem8=/Game/Materials/Textures/Babopus_DarkTones
+MRUItem9=/Game/Materials/MergeMaterial/M_MergeTestC
+MRUItem10=/Game/Materials/M_windowBox
+MRUItem11=/Game/Materials/MergeMaterial/M_cloudToWobble
+MRUItem12=/Game/Materials/MergeMaterial/M_MergeTestA
+MRUItem13=/Game/Materials/MergeMaterial/M_Cloud
+MRUItem14=/Game/Materials/Textures/distortion_shadertest
+MRUItem15=/Game/Materials/Textures/BLurNoise
+MRUItem16=/Game/Materials/Babtopus/Babopus_DarkTones
+MRUItem17=/Game/WindowBox/RT_SphereBox
+MRUItem18=/Engine/Functions/Engine_MaterialFunctions01/ImageAdjustment/CheapContrast
+MRUItem19=/Game/Materials/MergeMaterial/M_Wobble2
+MRUItem20=/Game/Materials/MergeMaterial/M_wobble
+MRUItem21=/Game/Materials/Textures/TesselatingPatterns/M_PatternMerge
+MRUItem22=/Game/Materials/Textures/TesselatingPatterns/M_Triforce
+MRUItem23=/Game/Materials/Textures/TesselatingPatterns/M_Checker
+MRUItem24=/Game/Materials/Cobblestone/M_CbblestoneDistortionOpacity
+MRUItem25=/Game/Materials/MergeMaterial/M_MergeGarvCobbleDistortion
+MRUItem26=/Game/Materials/Gravel/M_GravelDistprtionOPacity
+MRUItem27=/Game/Materials/Gravel/M_Grave
+MRUItem28=/Game/Materials/MergeMaterial/M_MergeGravCobble
+MRUItem29=/Game/sANDdUNE
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -3649,16 +3650,15 @@ Texture2D.Compositing=False
 Theme0=New Theme
 
 [RecentColors]
-Color0=(R=358.345337,G=0.938926,B=0.502887,A=1.000000)
-Color1=(R=358.345337,G=0.938926,B=0.502887,A=1.000000)
-Color2=(R=358.345337,G=0.938926,B=0.502887,A=1.000000)
-Color3=(R=358.360107,G=0.937500,B=0.500000,A=1.000000)
-Color4=(R=358.360077,G=0.733802,B=0.500000,A=1.000000)
+Color0=(R=240.000000,G=1.000000,B=0.240580,A=0.000000)
+Color1=(R=312.184784,G=0.592760,B=1.000000,A=1.000000)
+Color2=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
+Color3=(R=0.000000,G=0.000000,B=0.000000,A=0.000000)
+Color4=(R=0.000000,G=0.000000,B=0.500000,A=0.500000)
 Color5=(R=319.133575,G=0.210913,B=1.000000,A=1.000000)
-Color6=(R=0.000000,G=0.000000,B=0.500000,A=0.500000)
-Color7=(R=0.000000,G=0.000000,B=0.000000,A=0.000000)
-Color8=(R=0.000000,G=0.000000,B=1.000000,A=0.000000)
-Color9=(R=312.184784,G=0.592760,B=1.000000,A=1.000000)
+Color6=(R=358.360077,G=0.733802,B=0.500000,A=1.000000)
+Color7=(R=358.360107,G=0.937500,B=0.500000,A=1.000000)
+Color8=(R=358.345337,G=0.938926,B=0.502887,A=1.000000)
 
 [PropertyWindowWidths]
 PropertyEditorToolkit_PinAsColumnHeader=24
