--- a/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/SimulacrumNo1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -353,7 +353,7 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedI
 LastLevel=/Game/sANDdUNE
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
@@ -385,10 +385,6 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/Materials/Babtopus/M_BabtopusDark.M_BabtopusDark
-OpenAssetsAtExit=/Game/Materials/Babtopus/M_BabtopusHigh.M_BabtopusHigh
-OpenAssetsAtExit=/Game/Materials/Babtopus/M_BabtopusMid.M_BabtopusMid
-OpenAssetsAtExit=/Game/Materials/Babtopus/M_BabtopusMerged.M_BabtopusMerged
 OpenAssetsAtExit=/Game/Materials/DancingMen/M_DancingMan.M_DancingMan
 
 [DetailCategories]
@@ -1448,6 +1444,7 @@ MaterialExpressionPanner.MaterialExpressionPanner=True
 MaterialExpressionPanner.MaterialExpression=True
 MaterialExpressionConvert.MaterialExpressionConvert=True
 MaterialExpressionConvert.MaterialExpression=True
+InterchangeFbxSettings.FBX =True
 
 [ContentBrowser]
 ContentBrowserDrawer.SelectedPaths=/Game/Materials/Textures
